--- a/report.css
+++ b/report.css
@@ -69,7 +69,7 @@ main {
 
 }
 main img{
-    width: 20%;
+    width:20%;
 }
 aside {
 
@@ -82,4 +82,11 @@ footer ul{
     display: flex;
 justify-content: center;
 margin-top: 9em;
+}
+.report{
+    position: absolute;
+    left: 20%;
+    max-width: 60vw;
+    min-height: 20vh;
+    padding: 1em;
 }
